--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -1,13 +1,74 @@
-#title {
-  background-color: #ff4c68;
+/* Global */
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3.5rem;
+  font-weight: 900;
+  line-height: 1.5;
 }
 
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  /* font-size: 1.5rem; */
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+/* Title */
 .container-fluid {
   padding: 3% 15%;
 }
 
-h1 {
-  font-family: "Montserrat-Black", sans-serif;
-  font-size: 3rem;
-  line-height: 1.5;
+.navbar {
+  padding-bottom: 4.5rem;
+  padding-left: 0;
+}
+
+.navbar-brand {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+#title {
+  background-color: #ff4c68;
+
+  color: #fff;
+}
+
+.title-image {
+  width: 60%;
+  transform: rotate(10deg);
+}
+
+/* Download Button */
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+
+/* Features */
+
+/* #features {
+  padding: 7% ;
+} */
+
+.feature-img {
+  margin: 1rem;
+  color: #ef8172;
+
+}
+
+.feature-img:hover {
+  color: #ff4c68;
 }
