--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
 </head>
+
 <body>
-    <h1>It's a <%= curDay%>!</h1>
+
+    <h1> <%= curDay %> </h1>
+
+    <form action="/" method='post'>
+        <label for="item">New Item:</label>
+        <input id="item" name="newItem" type="text">
+        <button type="submit" name="button">Add</button>
+    </form>
+
+    <ul>
+        <% for (var i=0; i < newItemList.length; i++) { %>
+        <li> <%= newItemList[i] %> </li>
+        <% } %>
+    </ul>
 </body>
+
 </html>
